--- a/Example.ipynb
+++ b/Example.ipynb
@@ -183,7 +183,7 @@
     "## 5 build a complete model\n",
     "from ortools.sat.python import cp_model\n",
     "\n",
-    "# input and output masks\n",
+    "# input and output exponents\n",
     "u = [1]*4 + [0]*60\n",
     "v = [0, 1] + [0]*62\n",
     "\n",
