--- a/Example.ipynb
+++ b/Example.ipynb
@@ -175,7 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All trails have 2-adic absolute value <= 0.5\n"
+      "All trails have 2-adic absolute value <= 0.25\n"
      ]
     }
    ],
@@ -184,14 +184,14 @@
     "from ortools.sat.python import cp_model\n",
     "\n",
     "# input and output exponents\n",
-    "u = [1]*4 + [0]*60\n",
+    "u = [1, 0, 0, 0]*4 + [0]*48 # we skip the first round, as the input set saturates an sbox of the first layer.\n",
     "v = [0, 1] + [0]*62\n",
     "\n",
     "# The model\n",
     "model = cp_model.CpModel()\n",
     "\n",
     "# We track input and output exponents before and after the key addition and round function\n",
-    "exponents = [[model.NewBoolVar(\"\") for _ in range(64)] for _ in range(9)]\n",
+    "exponents = [[model.NewBoolVar(\"\") for _ in range(64)] for _ in range(7)]\n",
     "# We also track all variables that influence the correlation of the trail\n",
     "cor_vars = []\n",
     "\n",
@@ -204,7 +204,7 @@
     "    model.Add(exponents[-1][i] == v[i])\n",
     "\n",
     "# model rounds\n",
-    "for r in range(4):\n",
+    "for r in range(3):\n",
     "    model = model_key_addition(model, *exponents[2*r:2*(r+1)])\n",
     "    model, ecv = model_round_function(model,  *exponents[2*r+1:2*(r+1)+1])\n",
     "    cor_vars += ecv\n",
